# LLM-Multimodel-Application

./: .gitignore  README.md  main.py
AI Application/: README.md  main.py  pyproject.toml  requirements.txt
AI Application/ai_interactions/: ai_approaches.py
AI Application/client/: llm_connection.py
AI Application/config/: HW_usage.py  ai_config.py
AI Application/data_preparation/: data_generation.py  data_processing.py  generate_report.py  prompt_template.py
AI Application/data_preparation/data/llm_tuning/: instructions.txt
AI Application/gradio_cached_examples/15/: log.csv
AI Application/gradio_chatbot/: chat_interface.py
AI Application/helpers/: logger.py
AI Application/infographics/: generate_report.py
AI Application/routes/: ai_routes.py  lifespan_manager.py
AI Application/task_execution/: crewai_agent.py  graph_network.py  rag_chats.py  task_execution.py
Automating Instruction Generation/: Automating_Instruction_Generation_off_any_Document_for_LLM_Fine_Tuning.ipynb
KGraph_Extraction_local_LLM/: KGraph_Extraction_&_Visualization_with_local_LLM.ipynb
Tested Scripts Provided/AutomateBrowsing/: main.py  requirements.txt
Tested Scripts Provided/DataFromImage/: image_model.py  load_image_chain.py  requirements.txt  structure.py
Tested Scripts Provided/LocalKnowledgeGraphExtraction/: Graph_Only_V01.ipynb  KGraph_Extact_V10.py  (+1 more)
Testing/: DocCluster_RAG.ipynb  DocCluster_RAG2.ipynb  doc_cluster_2.py
config/: ai_config.py  app_config.py  env example
routes/: ai_routes.py  lifespan_manager.py
task_execution/: task_execution.py
(+42 files in other folders)
